@@ -23,6 +23,7 @@ Version 1.5.0-svn:
  * miscellaneous and bug fixes:
    * wmlxgettext now print some context information about the strings
      extracted (patch #993)
+   * Fixed network_worker to span at least one thread (bug #11238)
    * more comprehensive terrain type naming to avoid confusing displays such
      as 'Road (Grassland)' or 'Impassable mountain (Cavewall)'
      This also applies to the WML keys used in the stats :
